# chem-tutor-backend

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  _commit_msg.txt  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_add_reference_card_json_to_topics.py  0258e0f4835d_full_schema.py  20260306_add_lesson_rules_and_misconceptions.py  20260405_add_presence_heartbeats.py  20260405_calculator_enabled.py  20260405_classroom_live_session.py  20260406_classroom_sessions.py  20260406_exit_ticket_lesson_id.py  20260407_allow_answer_reveal.py  20260408_exit_ticket_response_unique.py  20260409_max_answer_reveals_per_lesson.py  20260410_min_level1_examples_for_level2.py  20260416_student_blocked.py  (+5 more)
app/: main.py
docs/: curriculum_schema_v2.json
notebooks/: benchmark_providers.ipynb
scripts/: bootstrap_superadmin.py  delete_users_and_cache.py  docker-logs.ps1  migrate_phases.py  migrate_rename_tables.py  migrate_v2.py  seed.py  seed_ap_phases.py  seed_few_shots.py  simulate_mastery_category_scores.py
tests/: test_analytics_service_student_standards.py  test_authz_sse_tokens.py  test_classroom_access_scope.py  test_exit_ticket_misconceptions.py  test_exit_ticket_scoring.py  test_hint_generation_service.py  test_live_session.py  test_markdown_sanitizer.py  test_mastery_live_progress.py  test_math_eval_units.py  test_playlist_coordinator.py  test_problem_playlist_hydration.py  test_problem_wire_input_fields.py  test_standards_mastery_repo_merge.py  test_step_validation_phase1.py  test_student_exit_tickets.py
(+177 files in other folders)
