[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chem-guide-backend"
version = "0.2.0"
description = "AI Chemistry Tutor Backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Validation & config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # AI layer
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",

    # Resilience
    "tenacity>=8.3.0",

    # Logging
    "structlog>=24.0.0",

    # HTTP client (for provider benchmarking)
    "httpx>=0.27.0",

    # Env file loading (used by Alembic env.py and settings)
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "pytest-cov>=5.0",
]
notebooks = [
    "jupyter>=1.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
